new missing forwarding reload listener handling